ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-dev-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # Add to generate certificates for this ingress
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.global-static-ip-name: "web-ingress-ip"
spec:
  rules:
    - host: www.scottbusinge.com
      http:
        paths:
          - backend:
              serviceName: web-test
              servicePort: 80
    
  tls:
    - secretName: sslcerts
      hosts:
      - www.scottbusinge.com
